Jinja Changelog
===============

Version 1.2
-----------
(codename to be selected, release date unknown)

- environments now have a `translator_factory` parameter that allows
  to change the translator without subclassing the environment.

- fixed bug in buffet plugin regarding the package loader

- once again improved debugger.

- added `groupby` filter.


Version 1.1
-----------
(codename: sinka, released Jun 1, 2007)

- blocks now support ``{{ super() }}`` to render the parent output.

- debugging system improved, smaller filesize for the cached files.
  Debugging works now well for any module using linecache.

- ``{{ debug() }}`` can now be used to get a list of filters and
  tags.

- the template lexer keeps not track of brace, parenthesis and
  bracket balance in order to not break variable tags apart if they
  are configured to look like this: ``${expr}``. This also fixes
  the problem with nested dicts in variable expressions.

- it's now possible to configure the variable blocks to look the
  same as the block delimiters. Thus you can set the syntax to something
  like ``{ / }`` for both blocks and variables.

- added whitespace management system for the template designer.

- some small bugfixes.

- improved security system regarding function calls and variable
  assignment in for loops.

- added `lipsum` function to generate random text.

- strings without unicode characters are processed as binary strings now
  to workaround problems with `datetime.strftime` which only accepts
  binary strings.

- it's now possible to use newlines in string literals

- developer friendly traceback is now toggleable

- the variable failure is now pluggable by replacing the undefined
  singleton for an environment instance

- fixed issue with old-style classes not implementing `__getitem__`
  (thanks to Axel Böhm for discovering that bug)

- added a bunch of new docstrings to the Jinja classes. Makes fun now to
  use pydoc :-)
